# RevOps-Hub

./: .gitignore  README.md  manifest.json
.github/workflows/: ci.yml
aip/: agents.yaml
cli/: package.json
cli/src/: index.ts
configs/: __init__.py  acme-corp.json  schema.py  startup-co.json
configs/customers/: sample_customer.json  sample_customer.yaml
configs/tiers/: enterprise.json  enterprise.yaml  growth.json  growth.yaml  starter.json  starter.yaml
docs/: ADMIN_GUIDE.md  API.md  AUDIT_REPORT.md  DATA_CONTRACTS.md  DEMO_QUERIES.sql  DEMO_SCRIPT.md  INGESTION_GUIDE.md  RBAC.md  SCENARIO_DESIGN.md  SETUP.md  TEAMS_WEBHOOK_INTEGRATION.md  USER_GUIDE.md
ontology/: ontology_config.yaml
scripts/: generate_manifest.py  provision_workspace.py  requirements.txt  validate_configs.py  validate_manifest.sh
sdk/python/: pyproject.toml
sdk/python/revops_sdk/: __init__.py
sdk/python/revops_sdk/client/: __init__.py
sdk/python/revops_sdk/models/: __init__.py
sdk/python/revops_sdk/webhooks/: __init__.py
sdk/typescript/: package.json
templates/: index.ts
templates/enterprise/: manifest.json
templates/growth/: manifest.json
templates/starter/: manifest.json
transforms/: BUILD_ORDER.md
transforms/agents/: action_apis.py  action_hooks.py  config_agent.py  ops_agent.py  self_service_wizard.py
transforms/audit/: __init__.py  (+1 more)
webapp/: .env.example  README.md  jest.config.js  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts
workshop/: DATA_CONTRACTS.md  DESIGN_SYSTEM.md  PIPELINE_HEALTH_DASHBOARD.md  REP_COACHING_DASHBOARD.md
(+184 files in other folders)
