[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revops-sdk"
version = "0.1.0"
description = "RevOps Command Center SDK for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "RevOps Team", email = "sdk@revops.io" }
]
keywords = [
    "revops",
    "salesforce",
    "crm",
    "webhooks",
    "sdk"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Documentation = "https://docs.revops.io/sdk/python"
Repository = "https://github.com/revops/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["revops_sdk"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
